This ensures that the sidebar fills the full height of the viewport.
The page now always has a vertical scrollbar, because the copyright
footer is beneath #everything. I think this is good anyway, because the
footer should be unobtrusive.

fixes #1051

--- a/themes/default/files/resources/exam.css
+++ b/themes/default/files/resources/exam.css
@@ -189,6 +189,7 @@ img, object[type*="image"] {
 	display: grid;
     grid-template: "main";
     grid-gap: var(--spacing);
+    min-height: 100vh;
 }
 body.show-nav #everything {
 	grid-template: "navMenu main" / 300px;
